2000-06-19  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc.el (mhc-goto-today): Use mhc-summary-search-day().
	* emacs/mhc-summary.el (mhc-summary-search-day): New function, for search YY MM DD in summary-buffer.
	* emacs/mhc-wl.el (mhc-wl-summary-search-day): Ditto.
	* emacs/mhc-gnus.el (mhc-gnus-summary-search-day): Ditto.
	* emacs/mhc-mew.el (mhc-mew-summary-search-day): Ditto.
	(mhc-mew/header-string-review): New constant, header-string when schedule exist.
	(mhc-mew-insert-summary-contents): If shedule exist, put review mark.
	
2000-06-19  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc.el (mhc-goto-today): Fix typo.

2000-06-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc.el (mhc-setup): Add autoload definition of
	`mhc-ps-preview' and `mhc-ps-print'.

	* emacs/mhc-ps.el: Add comments.
	(mhc-ps/start-process): New function.
	(mhc-ps-preview): Clean up and add autoload magic.
	(mhc-ps-print): Ditto.

2000-06-19  Yoshinari Nomura  <nom@quickhack.net>
            OHARA Shigeki <oharakun@allnet.ne.jp>

	* today: new feature --format=ps was added.

2000-06-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/MHC-MK: Add mhc-ps.el.

	* emacs/mhc-ps.el: Fix coding system trouble, clean up codes, and
	add new customize variables.

	* emacs/mhc-date.el: Fix typo.

2000-06-18  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-ps.el: New file.

2000-06-18  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc.el (mhc-input-month):
	fix to set default month correctly.

	* emacs/mhc-record.el (mhc-record/append-log):
	Add seconds into log string (%H:%M -> %T).

	* emacs/mhc-misc.el (mhc-misc-substring-to-int): New function.

	* emacs/mhc-minibuf.el (mhc-minibuf-date-to-s): fix typo.

	* emacs/mhc-logic.el (mhc-logic/month-alist):
	correct number for "aug" 9 -> 8.

	* emacs/mhc-db.el (mhc-db/eval-for-month):
	calculate last day of a month without timezone.el.

	* emacs/mhc-day.el (mhc-day-let):