@@ -82,9 +82,9 @@
 	(mhc-put-icon icon (+ pos mhc-summary-icon-position)))))
 
 
-(defun mhc-wl-summary-search-day (yy mm dd)
+(defun mhc-wl-summary-search-date (date)
   (re-search-forward
-   (format "^\\([0-9]+ | \\)?%02d/%02d" mm dd) nil t))
+   (mhc-date-format date "^[0-9]+ | %02d/%02d" mm dd) nil t))
 
 
 (defsubst mhc-wl/date-to-folder (date)
@@ -123,7 +123,7 @@
 (put 'mhc-wl 'get-import-buffer 'mhc-wl-get-import-buffer)
 (put 'mhc-wl 'generate-summary-buffer 'mhc-wl-generate-summary-buffer)
 (put 'mhc-wl 'insert-summary-contents 'mhc-wl-insert-summary-contents)
-(put 'mhc-wl 'summary-search-day 'mhc-wl-summary-search-day)
+(put 'mhc-wl 'summary-search-date 'mhc-wl-summary-search-date)
 (put 'mhc-wl 'summary-mode-setup 'mhc-wl-summary-mode-setup)
 
 ;;; Copyright Notice:
